2010-03-27  Peter Bloomfield

	* libbalsa/mailbox.c (libbalsa_mailbox_close): increase mailbox
	ref count while closing it.

2010-03-23  Peter Bloomfield

	* src/main.c: missing include.

2010-03-23  Peter Bloomfield

	* configure.in: use single-includes.

2010-03-20  Peter Bloomfield

	* libbalsa/html.c (libbalsa_html_get_view_widget): new method to
	get the actual view widget.
	* libbalsa/html.h: ditto.
	* src/balsa-mime-widget-text.c (bm_widget_new_html): connect to
	key-press-event on the actual view widget.

2010-03-11  Peter Bloomfield

	* libbalsa/files.c (libbalsa_icon_finder): allocate string only
	if needed.

2010-03-07  Albrecht Dreß

	* src/balsa-mime-widget-text.c: do not mangle quotation characters
	when copying text.

2010-03-04  Pawel Salek

	* src/balsa-mime-widget-crypto.c: set the parent right.

2010-03-03  Albrecht Dreß

	* libbalsa/misc.[hc]:
	* libbalsa/mailbox.c: make libbalsa_size_to_gchar() a common function.
	* src/folder-conf.c: use it for displaying IMAP quota.

2010-03-03  Peter Bloomfield

	* libbalsa/message.c (libbalsa_message_change_flags): check
	argument validity.
	* libbalsa/send.c (handle_successful_send): check that the
	message still belongs to a mailbox.

2010-03-03  Peter Bloomfield

	* libbalsa/address-view.c (libbalsa_address_view_get_list): do
	not append NULL list in internet_address_list_append.

2010-02-28  Peter Bloomfield

	* src/folder-conf.c (folder_conf_imap_sub_node): remove mnemonic
	from subfolder-of label.

2010-02-20  Peter Bloomfield

	* src/folder-conf.c (set_ok_sensitive),
	(folder_conf_imap_sub_node): clean up folder properties dialog
	and manage Update button sensitivity.
	* src/mailbox-conf.c (create_local_mailbox_dialog),
	(create_imap_mailbox_dialog), (mailbox_conf_view_new_full),
	(mailbox_conf_view_new): use callback to manage Update button
	sensitivity.
	* src/mailbox-conf.h: new API.
	* src/main-window.c: change mailbox Edit to Properties.

2010-02-20  Albrecht Dreß
